--- a/index.html
+++ b/index.html
@@ -4,54 +4,95 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>İsme Özel Doğum Günü Şarkıları</title>
-  <link rel="stylesheet" href="style.css?v=4" />
+  <link rel="stylesheet" href="style.css?v=5" />
   <style>
-    .share-buttons {
-      margin: 10px 0;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
+    /* Sayfa genişliği ve merkezleme */
+    .container {
+      max-width: 820px;
+      margin: 0 auto;
+      padding: 16px;
     }
-    .share-buttons a, .share-buttons button {
+
+    /* Paylaş çubuğu */
+    #share { display:none; }
+    .share-wrap {
+      display:flex;
+      justify-content:center;   /* ORTALA */
+      margin: 12px 0 2px;
+    }
+    .share-buttons {
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      justify-content:center;   /* ORTALA */
+    }
+    .share-buttons a,
+    .share-buttons button {
       padding: 6px 12px;
       border-radius: 6px;
-      color: white;
+      color: #fff;
       font-size: 14px;
-      font-weight: bold;
+      font-weight: 700;
       text-decoration: none;
-      display: flex;
+      display: inline-flex;
       align-items: center;
       gap: 6px;
       border: none;
       cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,.12);
     }
-    .whatsapp { background-color: #25D366; }
-    .facebook { background-color: #1877F2; }
-    .twitter  { background-color: #000000; }
+    .whatsapp { background:#25D366; }
+    .facebook { background:#1877F2; }
+    .twitter  { background:#000; }
     .instagram {
       background: linear-gradient(45deg,#f09433,#e6683c,#dc2743,#cc2366,#bc1888);
     }
-    .copy { background-color: #666; }
+    .copy { background:#666; }
+
+    /* Player’ı da ortaya ve esnek yap */
+    #player { display:flex; justify-content:center; }
+    .video {
+      width: 100%;
+      max-width: 800px;
+      aspect-ratio: 16 / 9;
+      border:0;
+      border-radius:12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,.18);
+    }
+
+    /* Listeyi ve input’u ortalı görünür yap */
+    #results {
+      max-width: 800px;
+      margin: 10px auto 0;
+    }
+    #search {
+      max-width: 800px;
+      width: 100%;
+      margin: 0 auto 8px;
+      display: block;
+    }
   </style>
 </head>
 <body>
-  <h1>🎂 İsme Özel Doğum Günü Şarkıları</h1>
+  <div class="container">
+    <h1>🎂 İsme Özel Doğum Günü Şarkıları</h1>
 
-  <input type="text" id="search" placeholder="İsmini yaz..." autocomplete="off" />
-  <ul id="results"></ul>
+    <input type="text" id="search" placeholder="İsmini yaz..." autocomplete="off" />
+    <ul id="results"></ul>
 
-  <!-- Paylaş butonları (önce gizli) -->
-  <div id="share" style="display:none;">
-    <div class="share-buttons">
-      <a id="share-whatsapp" class="whatsapp" target="_blank" rel="noopener">📱 WhatsApp</a>
-      <a id="share-facebook" class="facebook" target="_blank" rel="noopener">📘 Facebook</a>
-      <a id="share-twitter" class="twitter" target="_blank" rel="noopener">🐦 X</a>
-      <a href="#" class="instagram" onclick="shareInstagram()">📷 Instagram</a>
-      <button class="copy" onclick="copyLink()">🔗 Kopyala</button>
+    <!-- Paylaş butonları (video üstünde ve ortalı) -->
+    <div id="share" class="share-wrap">
+      <div class="share-buttons">
+        <a id="share-whatsapp" class="whatsapp" target="_blank" rel="noopener">📱 WhatsApp</a>
+        <a id="share-facebook" class="facebook" target="_blank" rel="noopener">📘 Facebook</a>
+        <a id="share-twitter" class="twitter" target="_blank" rel="noopener">🐦 X</a>
+        <a href="#" class="instagram" onclick="shareInstagram()">📷 Instagram</a>
+        <button class="copy" onclick="copyLink()">🔗 Kopyala</button>
+      </div>
     </div>
-  </div>
 
-  <div id="player" style="margin-top:16px;"></div>
+    <div id="player" style="margin-top:10px;"></div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
   <script>
@@ -62,7 +103,6 @@
       try {
         const res = await fetch('names.json', { cache: 'no-store' });
         names = await res.json();
-
         fuse = new Fuse(names, {
           keys: ['name'],
           threshold: 0.3,
@@ -88,16 +128,13 @@
           const id = new URL(url).searchParams.get("v");
           return `https://www.youtube.com/embed/${id}`;
         }
-      } catch (e) {
-        console.warn("Embed parse hatası:", e);
-      }
+      } catch (_) {}
       return "";
     }
 
     function showShareButtons(url, name) {
       const encUrl = encodeURIComponent(url);
       const encText = encodeURIComponent(`🎂 ${name} için doğum günü şarkısı:`);
-
       document.getElementById("share-whatsapp").href =
         `https://api.whatsapp.com/send?text=${encText}%20${encUrl}`;
       document.getElementById("share-facebook").href =
@@ -124,28 +161,25 @@
       if (!embed) {
         document.getElementById('player').innerHTML =
           `<div style="color:#b00">Bu link gömülemedi. <a href="${currentUrl}" target="_blank" rel="noopener">YouTube'da aç</a>.</div>`;
-        document.getElementById('share').style.display = currentUrl ? 'block' : 'none';
+        document.getElementById('share').style.display = currentUrl ? 'flex' : 'none';
         return;
       }
 
-      // paylaş linklerini hazırla
       showShareButtons(currentUrl, item.name);
 
-      // player embed
       document.getElementById('player').innerHTML =
-        `<iframe width="560" height="315" src="${embed}" 
+        `<iframe class="video"
+           src="${embed}"
            title="${item.name}" frameborder="0"
            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
            allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>`;
 
-      // paylaş çubuğunu göster
-      document.getElementById('share').style.display = 'block';
+      document.getElementById('share').style.display = 'flex';
     }
 
     function renderResults(items) {
       const ul = document.getElementById('results');
       ul.innerHTML = '';
-
       if (!items || items.length === 0) {
         const li = document.createElement('li');
         li.textContent = 'Sonuç bulunamadı';
@@ -153,7 +187,6 @@
         ul.appendChild(li);
         return;
       }
-
       items.forEach(({ item }) => {
         const li = document.createElement('li');
         li.textContent = item.name;
