--- a/index.html
+++ b/index.html
@@ -4,100 +4,91 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>İsme Özel Doğum Günü Şarkıları</title>
-  <link rel="stylesheet" href="style.css?v=5" />
-  <style>
-    /* Sayfa genişliği ve merkezleme */
-    .container {
-      max-width: 820px;
-      margin: 0 auto;
-      padding: 16px;
-    }
-
-    /* Paylaş çubuğu */
-    #share { display:none; }
-    .share-wrap {
-      display:flex;
-      justify-content:center;   /* ORTALA */
-      margin: 12px 0 2px;
-    }
-    .share-buttons {
-      display:flex;
-      gap:10px;
-      flex-wrap:wrap;
-      justify-content:center;   /* ORTALA */
-    }
-    .share-buttons a,
-    .share-buttons button {
-      padding: 6px 12px;
-      border-radius: 6px;
-      color: #fff;
-      font-size: 14px;
-      font-weight: 700;
-      text-decoration: none;
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      border: none;
-      cursor: pointer;
-      box-shadow: 0 2px 6px rgba(0,0,0,.12);
-    }
-    .whatsapp { background:#25D366; }
-    .facebook { background:#1877F2; }
-    .twitter  { background:#000; }
-    .instagram {
-      background: linear-gradient(45deg,#f09433,#e6683c,#dc2743,#cc2366,#bc1888);
-    }
-    .copy { background:#666; }
-
-    /* Player’ı da ortaya ve esnek yap */
-    #player { display:flex; justify-content:center; }
-    .video {
-      width: 100%;
-      max-width: 800px;
-      aspect-ratio: 16 / 9;
-      border:0;
-      border-radius:12px;
-      box-shadow: 0 6px 18px rgba(0,0,0,.18);
-    }
-
-    /* Listeyi ve input’u ortalı görünür yap */
-    #results {
-      max-width: 800px;
-      margin: 10px auto 0;
-    }
-    #search {
-      max-width: 800px;
-      width: 100%;
-      margin: 0 auto 8px;
-      display: block;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css?v=3" />
 </head>
 <body>
-  <div class="container">
-    <h1>🎂 İsme Özel Doğum Günü Şarkıları</h1>
+  <h1>🎂 İsme Özel Doğum Günü Şarkıları</h1>
 
-    <input type="text" id="search" placeholder="İsmini yaz..." autocomplete="off" />
-    <ul id="results"></ul>
+  <input type="text" id="search" placeholder="İsmini yaz..." autocomplete="off" />
+  <ul id="results"></ul>
 
-    <!-- Paylaş butonları (video üstünde ve ortalı) -->
-    <div id="share" class="share-wrap">
-      <div class="share-buttons">
-        <a id="share-whatsapp" class="whatsapp" target="_blank" rel="noopener">📱 WhatsApp</a>
-        <a id="share-facebook" class="facebook" target="_blank" rel="noopener">📘 Facebook</a>
-        <a id="share-twitter" class="twitter" target="_blank" rel="noopener">🐦 X</a>
-        <a href="#" class="instagram" onclick="shareInstagram()">📷 Instagram</a>
-        <button class="copy" onclick="copyLink()">🔗 Kopyala</button>
-      </div>
-    </div>
+  <!-- Paylaşım barı (video üstünde) -->
+  <div id="share" class="share-bar" aria-label="Paylaş"></div>
 
-    <div id="player" style="margin-top:10px;"></div>
-  </div>
+  <div id="player" class="player"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
   <script>
     let fuse, names = [];
-    let currentUrl = "";
+    let currentVideoUrl = null;
+    const siteBase = location.href.replace(/#.*$/, '');
+
+    // Basit SVG ikonları
+    const icons = {
+      wa: `<svg viewBox="0 0 32 32" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M19.1 17.4c-.3-.1-1.8-.9-2.1-1s-.5-.1-.8.2-.9 1-1.1 1.2-.4.2-.7.1a7.9 7.9 0 0 1-2.3-1.4 9 9 0 0 1-1.7-2.1c-.2-.4 0-.6.1-.7l.5-.6c.2-.3.2-.5.3-.8s0-.6-.1-.8c-.1-.2-.8-2-1.1-2.8-.3-.8-.6-.7-.8-.7h-.7a1.5 1.5 0 0 0-1 .5c-.3.3-1 1-1 2.5s1 2.9 1.2 3.1.2.3.5.6a13.2 13.2 0 0 0 3.2 2.9 10.9 10.9 0 0 0 3.4 1.7 3.8 3.8 0 0 0 1.8.1c.6-.1 1.8-.7 2-1.4s.2-1.3.1-1.4-.2-.1-.5-.2z"/><path fill="currentColor" d="M26.6 5.4A13.5 13.5 0 0 0 5.3 26.7l-1.9 5.9 6-1.9A13.5 13.5 0 0 0 26.6 5.4zm-4.1 17.8a10.7 10.7 0 0 1-9.6 1.9l-.7-.2-3.6 1.2 1.2-3.6-.2-.7a10.7 10.7 0 1 1 12.9 1.4z"/></svg>`,
+      fb: `<svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M22 12a10 10 0 1 0-11.6 9.9v-7h-2.3V12h2.3V9.8c0-2.3 1.4-3.6 3.4-3.6.98 0 2 .18 2 .18v2.2h-1.1c-1.1 0-1.5.68-1.5 1.4V12h2.6l-.4 2.9h-2.2v7A10 10 0 0 0 22 12"/></svg>`,
+      x: `<svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M18.2 2H21l-6.6 7.5L22.2 22h-5.8l-4.5-5.9-5.1 5.9H2l7.1-8.2L1.1 2h6l4.1 5.4L18.2 2Zm-2 18h1.2L7 4H5.7L16.2 20Z"/></svg>`,
+      ig: `<svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7Zm5 3.5A5.5 5.5 0 1 1 6.5 13 5.5 5.5 0 0 1 12 7.5Zm0 2A3.5 3.5 0 1 0 15.5 13 3.5 3.5 0 0 0 12 9.5Zm5.25-3.25a1.25 1.25 0 1 1-1.25 1.25 1.25 1.25 0 0 1 1.25-1.25Z"/></svg>`,
+      copy: `<svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M16 1H4a2 2 0 0 0-2 2v12h2V3h12V1Zm3 4H8a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h11a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2Zm0 16H8V7h11v14Z"/></svg>`
+    };
+
+    function buildShareBar() {
+      const wrap = document.getElementById('share');
+      wrap.innerHTML = '';
+
+      const buttons = [
+        { id: 'wa',  cls: 'btn wa',  label: 'WhatsApp', href: '#' },
+        { id: 'fb',  cls: 'btn fb',  label: 'Facebook', href: '#' },
+        { id: 'x',   cls: 'btn x',   label: 'X (Twitter)', href: '#' },
+        { id: 'ig',  cls: 'btn ig',  label: 'Instagram', href: '#' },
+        { id: 'cp',  cls: 'btn copy',label: 'Kopyala', href: '#',  copy: true }
+      ];
+
+      buttons.forEach(b => {
+        const a = document.createElement('a');
+        a.className = b.cls;
+        a.id = `share-${b.id}`;
+        a.href = b.href;
+        a.target = b.copy ? '' : '_blank';
+        a.rel = b.copy ? '' : 'noopener';
+        a.innerHTML = `${icons[b.id === 'cp' ? 'copy' : b.id]}<span>${b.label}</span>`;
+        if (b.copy) {
+          a.addEventListener('click', (e) => {
+            e.preventDefault();
+            const toCopy = currentVideoUrl || siteBase;
+            navigator.clipboard.writeText(toCopy).then(() => {
+              a.classList.add('copied');
+              a.querySelector('span').textContent = 'Kopyalandı!';
+              setTimeout(() => {
+                a.classList.remove('copied');
+                a.querySelector('span').textContent = 'Kopyala';
+              }, 1200);
+            });
+          });
+        }
+        wrap.appendChild(a);
+      });
+
+      updateShareLinks();
+    }
+
+    function updateShareLinks() {
+      const url = currentVideoUrl || siteBase;
+      const text = '🎂 İsme özel doğum günü şarkısı';
+      const encU = encodeURIComponent(url);
+      const encT = encodeURIComponent(text);
+
+      const qs = {
+        wa: `https://wa.me/?text=${encT}%20${encU}`,
+        fb: `https://www.facebook.com/sharer/sharer.php?u=${encU}`,
+        x:  `https://twitter.com/intent/tweet?text=${encT}&url=${encU}`,
+        ig: `https://www.instagram.com/?url=${encU}` // IG dış yönlendirme
+      };
+      ['wa','fb','x','ig'].forEach(id => {
+        const el = document.getElementById(`share-${id}`);
+        if (el) el.href = qs[id];
+      });
+    }
 
     async function loadNames() {
       try {
@@ -115,85 +106,37 @@
       }
     }
 
-    function toEmbed(url) {
-      if (!url) return "";
-      try {
-        if (url.includes("youtube.com/shorts/")) {
-          const id = url.split("/shorts/")[1].split(/[?&]/)[0];
-          return `https://www.youtube.com/embed/${id}`;
-        } else if (url.includes("youtu.be/")) {
-          const id = url.split("youtu.be/")[1].split(/[?&]/)[0];
-          return `https://www.youtube.com/embed/${id}`;
-        } else if (url.includes("watch?v=")) {
-          const id = new URL(url).searchParams.get("v");
-          return `https://www.youtube.com/embed/${id}`;
-        }
-      } catch (_) {}
-      return "";
-    }
-
-    function showShareButtons(url, name) {
-      const encUrl = encodeURIComponent(url);
-      const encText = encodeURIComponent(`🎂 ${name} için doğum günü şarkısı:`);
-      document.getElementById("share-whatsapp").href =
-        `https://api.whatsapp.com/send?text=${encText}%20${encUrl}`;
-      document.getElementById("share-facebook").href =
-        `https://www.facebook.com/sharer/sharer.php?u=${encUrl}`;
-      document.getElementById("share-twitter").href =
-        `https://twitter.com/intent/tweet?text=${encText}&url=${encUrl}`;
-    }
-
-    function copyLink() {
-      if (!currentUrl) return;
-      navigator.clipboard.writeText(currentUrl).then(() => {
-        alert("🔗 Link kopyalandı!");
-      });
-    }
-
-    function shareInstagram() {
-      alert("📷 Instagram doğrudan link paylaşımı desteklemiyor. Kopyaladığınız linki DM veya hikayede yapıştırabilirsiniz.");
-    }
-
-    function playItem(item) {
-      currentUrl = String(item.youtube_url || "").trim();
-      const embed = toEmbed(currentUrl);
-
-      if (!embed) {
-        document.getElementById('player').innerHTML =
-          `<div style="color:#b00">Bu link gömülemedi. <a href="${currentUrl}" target="_blank" rel="noopener">YouTube'da aç</a>.</div>`;
-        document.getElementById('share').style.display = currentUrl ? 'flex' : 'none';
-        return;
-      }
-
-      showShareButtons(currentUrl, item.name);
-
-      document.getElementById('player').innerHTML =
-        `<iframe class="video"
-           src="${embed}"
-           title="${item.name}" frameborder="0"
-           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-           allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>`;
-
-      document.getElementById('share').style.display = 'flex';
-    }
-
     function renderResults(items) {
       const ul = document.getElementById('results');
       ul.innerHTML = '';
+
       if (!items || items.length === 0) {
         const li = document.createElement('li');
         li.textContent = 'Sonuç bulunamadı';
-        li.style.color = '#666';
+        li.className = 'nores';
         ul.appendChild(li);
         return;
       }
+
       items.forEach(({ item }) => {
         const li = document.createElement('li');
         li.textContent = item.name;
-        li.style.cursor = 'pointer';
-        li.onclick = () => playItem(item);
+        li.className = 'result';
+        li.onclick = () => play(item);
         ul.appendChild(li);
       });
+    }
+
+    function play(item) {
+      currentVideoUrl = item.youtube_url;
+      document.getElementById('player').innerHTML =
+        `<iframe width="560" height="315" src="${item.youtube_url}"
+           title="${item.name}" frameborder="0"
+           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+           allowfullscreen></iframe>`;
+      updateShareLinks();
+      // sayfayı video alanına yaklaştır
+      document.getElementById('player').scrollIntoView({ behavior: 'smooth', block: 'start' });
     }
 
     let tId;
@@ -204,7 +147,8 @@
         if (!q) {
           document.getElementById('results').innerHTML = '';
           document.getElementById('player').innerHTML = '';
-          document.getElementById('share').style.display = 'none';
+          currentVideoUrl = null;
+          updateShareLinks();
           return;
         }
         const result = fuse.search(q, { limit: 10 });
@@ -217,14 +161,15 @@
         const q = e.target.value.trim();
         if (!q) return;
         const result = fuse.search(q, { limit: 1 });
-        if (result.length) playItem(result[0].item);
+        if (result.length) play(result[0].item);
       }
     }
 
+    // init
+    buildShareBar();
+    loadNames();
     document.getElementById('search').addEventListener('input', onSearchInput);
     document.getElementById('search').addEventListener('keydown', onSearchEnter);
-
-    loadNames();
   </script>
 </body>
 </html>
