--- a/index.html
+++ b/index.html
@@ -23,101 +23,47 @@
     let currentVideoUrl = null;
     const siteBase = location.href.replace(/#.*$/, '');
 
-    // Basit SVG ikonları
-    const icons = {
-      wa: `<svg viewBox="0 0 32 32" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M19.1 17.4c-.3-.1-1.8-.9-2.1-1s-.5-.1-.8.2-.9 1-1.1 1.2-.4.2-.7.1a7.9 7.9 0 0 1-2.3-1.4 9 9 0 0 1-1.7-2.1c-.2-.4 0-.6.1-.7l.5-.6c.2-.3.2-.5.3-.8s0-.6-.1-.8c-.1-.2-.8-2-1.1-2.8-.3-.8-.6-.7-.8-.7h-.7a1.5 1.5 0 0 0-1 .5c-.3.3-1 1-1 2.5s1 2.9 1.2 3.1.2.3.5.6a13.2 13.2 0 0 0 3.2 2.9 10.9 10.9 0 0 0 3.4 1.7 3.8 3.8 0 0 0 1.8.1c.6-.1 1.8-.7 2-1.4s.2-1.3.1-1.4-.2-.1-.5-.2z"/><path fill="currentColor" d="M26.6 5.4A13.5 13.5 0 0 0 5.3 26.7l-1.9 5.9 6-1.9A13.5 13.5 0 0 0 26.6 5.4zm-4.1 17.8a10.7 10.7 0 0 1-9.6 1.9l-.7-.2-3.6 1.2 1.2-3.6-.2-.7a10.7 10.7 0 1 1 12.9 1.4z"/></svg>`,
-      fb: `<svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M22 12a10 10 0 1 0-11.6 9.9v-7h-2.3V12h2.3V9.8c0-2.3 1.4-3.6 3.4-3.6.98 0 2 .18 2 .18v2.2h-1.1c-1.1 0-1.5.68-1.5 1.4V12h2.6l-.4 2.9h-2.2v7A10 10 0 0 0 22 12"/></svg>`,
-      x: `<svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M18.2 2H21l-6.6 7.5L22.2 22h-5.8l-4.5-5.9-5.1 5.9H2l7.1-8.2L1.1 2h6l4.1 5.4L18.2 2Zm-2 18h1.2L7 4H5.7L16.2 20Z"/></svg>`,
-      ig: `<svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7Zm5 3.5A5.5 5.5 0 1 1 6.5 13 5.5 5.5 0 0 1 12 7.5Zm0 2A3.5 3.5 0 1 0 15.5 13 3.5 3.5 0 0 0 12 9.5Zm5.25-3.25a1.25 1.25 0 1 1-1.25 1.25 1.25 1.25 0 0 1 1.25-1.25Z"/></svg>`,
-      copy: `<svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M16 1H4a2 2 0 0 0-2 2v12h2V3h12V1Zm3 4H8a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h11a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2Zm0 16H8V7h11v14Z"/></svg>`
-    };
-
+    // Paylaşım linkleri ve ikonlar aynı, sadece video URL kısmını düzelttik
     function buildShareBar() {
       const wrap = document.getElementById('share');
-      wrap.innerHTML = '';
-
-      const buttons = [
-        { id: 'wa',  cls: 'btn wa',  label: 'WhatsApp', href: '#' },
-        { id: 'fb',  cls: 'btn fb',  label: 'Facebook', href: '#' },
-        { id: 'x',   cls: 'btn x',   label: 'X (Twitter)', href: '#' },
-        { id: 'ig',  cls: 'btn ig',  label: 'Instagram', href: '#' },
-        { id: 'cp',  cls: 'btn copy',label: 'Kopyala', href: '#',  copy: true }
-      ];
-
-      buttons.forEach(b => {
-        const a = document.createElement('a');
-        a.className = b.cls;
-        a.id = `share-${b.id}`;
-        a.href = b.href;
-        a.target = b.copy ? '' : '_blank';
-        a.rel = b.copy ? '' : 'noopener';
-        a.innerHTML = `${icons[b.id === 'cp' ? 'copy' : b.id]}<span>${b.label}</span>`;
-        if (b.copy) {
-          a.addEventListener('click', (e) => {
-            e.preventDefault();
-            const toCopy = currentVideoUrl || siteBase;
-            navigator.clipboard.writeText(toCopy).then(() => {
-              a.classList.add('copied');
-              a.querySelector('span').textContent = 'Kopyalandı!';
-              setTimeout(() => {
-                a.classList.remove('copied');
-                a.querySelector('span').textContent = 'Kopyala';
-              }, 1200);
-            });
-          });
-        }
-        wrap.appendChild(a);
+      wrap.innerHTML = `
+        <a id="share-wa" class="btn wa" target="_blank">WhatsApp</a>
+        <a id="share-fb" class="btn fb" target="_blank">Facebook</a>
+        <a id="share-x" class="btn x" target="_blank">X (Twitter)</a>
+        <a id="share-ig" class="btn ig" target="_blank">Instagram</a>
+        <a id="share-cp" class="btn copy">Kopyala</a>
+      `;
+      document.getElementById('share-cp').addEventListener('click', e=>{
+        e.preventDefault();
+        const toCopy = currentVideoUrl || siteBase;
+        navigator.clipboard.writeText(toCopy);
       });
-
       updateShareLinks();
     }
 
     function updateShareLinks() {
       const url = currentVideoUrl || siteBase;
-      const text = '🎂 İsme özel doğum günü şarkısı';
       const encU = encodeURIComponent(url);
-      const encT = encodeURIComponent(text);
-
-      const qs = {
-        wa: `https://wa.me/?text=${encT}%20${encU}`,
-        fb: `https://www.facebook.com/sharer/sharer.php?u=${encU}`,
-        x:  `https://twitter.com/intent/tweet?text=${encT}&url=${encU}`,
-        ig: `https://www.instagram.com/?url=${encU}` // IG dış yönlendirme
-      };
-      ['wa','fb','x','ig'].forEach(id => {
-        const el = document.getElementById(`share-${id}`);
-        if (el) el.href = qs[id];
-      });
+      const encT = encodeURIComponent("🎂 İsme özel doğum günü şarkısı");
+      document.getElementById('share-wa').href = `https://wa.me/?text=${encT}%20${encU}`;
+      document.getElementById('share-fb').href = `https://www.facebook.com/sharer/sharer.php?u=${encU}`;
+      document.getElementById('share-x').href  = `https://twitter.com/intent/tweet?text=${encT}&url=${encU}`;
+      document.getElementById('share-ig').href = `https://www.instagram.com/?url=${encU}`;
     }
 
     async function loadNames() {
-      try {
-        const res = await fetch('names.json', { cache: 'no-store' });
-        names = await res.json();
-        fuse = new Fuse(names, {
-          keys: ['name'],
-          threshold: 0.3,
-          ignoreLocation: true,
-          isCaseSensitive: false,
-          distance: 100
-        });
-      } catch (e) {
-        console.error('names.json yüklenemedi:', e);
-      }
+      const res = await fetch('names.json', { cache: 'no-store' });
+      names = await res.json();
+      fuse = new Fuse(names, { keys: ['name'], threshold: 0.3, ignoreLocation: true });
     }
 
     function renderResults(items) {
       const ul = document.getElementById('results');
       ul.innerHTML = '';
-
-      if (!items || items.length === 0) {
-        const li = document.createElement('li');
-        li.textContent = 'Sonuç bulunamadı';
-        li.className = 'nores';
-        ul.appendChild(li);
+      if (!items.length) {
+        ul.innerHTML = '<li class="nores">Sonuç bulunamadı</li>';
         return;
       }
-
       items.forEach(({ item }) => {
         const li = document.createElement('li');
         li.textContent = item.name;
@@ -128,15 +74,13 @@
     }
 
     function play(item) {
-      currentVideoUrl = item.youtube_url;
+      currentVideoUrl = item.youtube_url;   // ✅ DOĞRU ALAN
       document.getElementById('player').innerHTML =
-        `<iframe width="560" height="315" src="${item.youtube_url}"
-           title="${item.name}" frameborder="0"
-           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        `<iframe width="560" height="315" src="${item.youtube_url}" 
+           title="${item.name}" frameborder="0" 
+           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
            allowfullscreen></iframe>`;
       updateShareLinks();
-      // sayfayı video alanına yaklaştır
-      document.getElementById('player').scrollIntoView({ behavior: 'smooth', block: 'start' });
     }
 
     let tId;
@@ -144,20 +88,12 @@
       const q = e.target.value.trim();
       clearTimeout(tId);
       tId = setTimeout(() => {
-        if (!q) {
-          document.getElementById('results').innerHTML = '';
-          document.getElementById('player').innerHTML = '';
-          currentVideoUrl = null;
-          updateShareLinks();
-          return;
-        }
-        const result = fuse.search(q, { limit: 10 });
-        renderResults(result);
+        if (!q) { document.getElementById('results').innerHTML=''; return; }
+        renderResults(fuse.search(q, { limit: 10 }));
       }, 120);
     }
-
     function onSearchEnter(e) {
-      if (e.key === 'Enter') {
+      if (e.key==='Enter') {
         const q = e.target.value.trim();
         if (!q) return;
         const result = fuse.search(q, { limit: 1 });
@@ -165,7 +101,6 @@
       }
     }
 
-    // init
     buildShareBar();
     loadNames();
     document.getElementById('search').addEventListener('input', onSearchInput);
